Added logo to og image:

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <meta property="og:title" content="OLIVE KASPER DOCUMENTS CLEARING SERVICES | UAE"/>
         <meta property="og:description" content="A POWER THAT BUILDS YOUR BUSINESS"/>
-        <meta property="og:image" content="images/logo.jpeg"/>
+        <meta property="og:image" content="assets/images/illustration.png"/>
     </head>
     <body>
         <div id="pre-header">
